corrected open times spacing

--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,3 @@ body {
   font-family: 'Baskerville';
   src: local('Baskerville-Medium'), url(./Fonts/Baskerville-Medium.ttf) format('truetype');
 }
-
-.toptable td {
-  margin: 10px
-}
-
-.innertable td {
-  margin: 0px
-}
